// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Step active snapshot 1`] = `
<li
  className="progress-bar-active"
>
  <span />
</li>
`;

exports[`Step disabled snapshot 1`] = `
<li
  className="progress-bar-disabled"
>
  <span />
</li>
`;
